Update title and reference according to IOPLaTeXGuildines

--- a/errata.tex
+++ b/errata.tex
@@ -40,7 +40,6 @@
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\Q}{\mathbb{Q}}
-\newcommand{\ComplexI}{\text{i}}
 %
 %
 \newcommand{\JGF}{\mathbb{F}}    %Added
@@ -61,20 +60,25 @@
 
 \title{Erratum: Geometry of discrete quantum computing}
 
-\author{Andrew J. Hanson}
-\address{School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A}
+\author{Andrew J. Hanson$^{1}$, Gerardo Ortiz$^{2}$, Amr Sabry$^{1}$,
+Yu-Tsung Tai$^{31}$}
 
-\author{Gerardo Ortiz}
-\address{Department of Physics, Indiana University, Bloomington, IN 47405, U.S.A}
 
-\author{Amr Sabry}
-\address{School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A}
+\address{$^{1}$ School of Informatics and Computing, Indiana University,
+Bloomington, IN 47405, U.S.A}
 
-\author{Yu-Tsung Tai}
-\address{Department of Mathematics, Indiana University, Bloomington, IN 47405, U.S.A}
-\address{School of Informatics and Computing, Indiana University, Bloomington, IN 47405, U.S.A}
 
-%% \noindent{\it Keywords\/}: {\today}
+\address{$^{2}$ Department of Physics, Indiana University, Bloomington, IN
+47405, U.S.A}
+
+
+\address{$^{3}$ Department of Mathematics, Indiana University, Bloomington,
+IN 47405, U.S.A}
+
+
+\ead{ortizg@indiana.edu}
+
+\submitto{\jpa}
 
 \maketitle
 
@@ -141,7 +145,7 @@ need for this correction.}
 
 {}
 
-\bibliographystyle{plain}
+\bibliographystyle{iopart-num}
 \bibliography{gardinerbib}
 
 \end{document}
