Re: Yu-Tsung Tai wants to share "Erratum: Geometry of discrete...
From: Hanson, Andrew J. 
Sent: Friday, November 20, 2015 14:47
To: Tai, Yu-Tsung <yuttai@indiana.edu>
Cc: Sabry, Amr A. <sabry@indiana.edu>; Ortiz, Gerardo
<ortizg@indiana.edu>; johngardiner@ucla.edu
Subject: Re: Yu-Tsung Tai wants to share "Erratum: Geometry of discrete
quantum computing" with you

Personally, I would keep "may, might", but change to "entangled states"
as this does appear misspoken as written?
  Andy

Sent from my iPhone 5

On Nov 20, 2015, at 1:34 PM, Tai, Yu-Tsung <yuttai@indiana.edu> wrote:
Dear all, 
 
Actually… I cannot find a way to copy files easily on ShareLaTeX… 
The only method I can find inside the ShareLaTeX is to select all text
and copy by hand… 
There is also a “Copy Project” function in the menu, but I think it is
used to copy the whole project instead of a file.
ShareLaTeX can also sync to Dropbox, and it may be easier to operate
files by using DropBox…
 
About the Erratum. 
 
In line 7 in the Clarification, “process of determining whether a given
state \ket{\Phi} is a product state may depend on p.”
Actually, it is not that the process sometimes depend on p, but
sometimes not. Hence, “may” in this sentence is not necessary. 
 
In line 11 in the Clarification, “relying only on equation (27) might
not lead to the same result.”
We could drop the “might” as the same reason as above. 
 
In line 5 in 5.4. Maximal entanglement, “…the classification of states
with purity 1 as this computation…”
Should we write “…the classification of unentangled states as this
computation…” instead? Because we explicit say not to use equation (27)
to compute the purity in the same sentence.
 
Happy Thanksgiving : )
 
Best regards, 
Tai, Yu-Tsung (戴淯琮)
PhD student in Mathematics & Computer Science
Indiana University, Bloomington
 
From: Hanson, Andrew J. 
Sent: Friday, November 20, 2015 12:39
To: Tai, Yu-Tsung <yuttai@indiana.edu>
Subject: Fwd: Yu-Tsung Tai wants to share "Erratum: Geometry 

--- a/errata.lyx
+++ b/errata.lyx
@@ -371,9 +371,9 @@ Equation
 
  but also in other cases, this summation may vanish in the field even if
  the individual summands are non-zero.
- These anomalies are irrelevant for the classification of states with purity
- 1 as this is performed by directly checking the possibility of direct decomposi
-tion into product states, disregarding equation
+ These anomalies are irrelevant for the classification of unentangled states
+ as this is performed by directly checking the possibility of direct decompositi
+on into product states, disregarding equation
 \begin_inset space ~
 \end_inset
 
