--- a/errata.tex
+++ b/errata.tex
@@ -97,7 +97,7 @@ We present below a new version of section~5.4 that correctly counts maximally en
 
 \subsection{Maximal entanglement}
 
-Equation~(27) for $P_{\fh}$ includes a normalization factor $\frac{1}{n}$. In the discrete case, this normalization factor is undefined when $p ~|~ n$. Equation~(27) also includes a summation of $n$ terms. In the discrete case, certainly when $p ~|~ n$ but also in other cases, this summation may vanish in the field even if the individual summands are non-zero. These anomalies are irrelevant for the classification of states with purity 1 as this computation is performed by directly checking the possibility of direct decomposition into product states, disregarding equation~(27). 
+Equation~(27) for $P_{\fh}$ includes a normalization factor $\frac{1}{n}$. In the discrete case, this normalization factor is undefined when $p ~|~ n$. Equation~(27) also includes a summation of $n$ terms. In the discrete case, certainly when $p ~|~ n$ but also in other cases, this summation may vanish in the field even if the individual summands are non-zero. These anomalies are irrelevant for the classification of unentangled states as this computation is performed by directly checking the possibility of direct decomposition into product states, disregarding equation~(27). 
 
 For maximally entangled states, the purity calculation in conventional quantum mechanics using equation~(27) produces 0. Given the above observations, in a discrete field, equation~(27) may be undefined or may report a purity of 0 even for partially entangled states. For example, the normalized 5-qubit state $\ket{\Psi}=\left(1-\rmi\right)\left(\ket{00}+\ket{11}\right)\otimes\ket{000}$ has $P_{\fh}=0$ for $p=3$, and is not maximally entangled because only the first two qubits are entangled. In the discrete case, we therefore check for maximally entangled states using the following equations,
 \begin{equation}
