Before send to IOP http://proton.mpstechnologies.com/mpstrak/loginAuthor/OpenManuscriptContentHistoryAction?entityType=journalManuscript&msid=f363fb7f11fc82c416fb9c92ab30dceb

--- a/errata.tex
+++ b/errata.tex
@@ -105,8 +105,8 @@ For maximally entangled states, the purity calculation in conventional quantum m
 \end{equation}
 which avoids the normalization factor and simply checks that each summand is 0. 
 
-We now implement these procedures to enumerate the maximally entangled states for the specific cases for $n = 2 ,3 $ and compare these to the counts for product states. We can verify explicitly that unit-norm product states for $n=2$,
-$p=\{3,7,11,19,\ldots\}$ occur with frequency 
+We now implement these procedures to enumerate the maximally entangled states for the specific cases for $n = 2 ,3 $ and compare these to the counts for product states. We can verify explicitly that the numbers of unit-norm product states for $n=2$,
+$p=\{3,7,11,19,\ldots\}$ are  
 \[
 (p+1)p^{2}(p-1)^{2}=\{144,14\,112,145\,200,2339\,280,\ldots\}\ ,
 \]
@@ -119,8 +119,7 @@ p^{2}(p-1)^{2}=\{36,1764,12\,100,116\,964,\ldots\}\ ,
 and in general for $n$-qubits, there are $p^{n}\left(p-1\right)^{n}$
 instances of pure product states.
 
-Performing the computation using equation (\ref{eq:john}), we find maximally entangled states with
-frequencies for two qubits of 
+Performing the computation using equation (\ref{eq:john}), we find the numbers of maximally entangled states for two qubits to be 
 \[
 p\left(p^2-1\right)\left(p+1\right)=\left\{ 96,2688,15\,840,136\,800,\ldots\right\} \ .
 \]
